RESOLVED FIXED143751
Fix Debug build error 'comparison of unsigned expression >= 0 is always true [-Werror=type-limits]'
https://bugs.webkit.org/show_bug.cgi?id=143751
Summary Fix Debug build error 'comparison of unsigned expression >= 0 is always true ...
Joonghun Park
Reported 2015-04-15 01:48:23 PDT
Fix Debug build error which is introduced by https://trac.webkit.org/r182828. 'first' is unsigned type variable so it doesn't needed.
Attachments
Patch (1.45 KB, patch)
2015-04-15 02:06 PDT, Joonghun Park
no flags
Joonghun Park
Comment 1 2015-04-15 02:06:42 PDT
Csaba Osztrogonác
Comment 2 2015-04-15 02:08:26 PDT
Comment on attachment 250782 [details] Patch LGTM, r=me.
WebKit Commit Bot
Comment 3 2015-04-15 02:53:33 PDT
Comment on attachment 250782 [details] Patch Clearing flags on attachment: 250782 Committed r182840: <http://trac.webkit.org/changeset/182840>
WebKit Commit Bot
Comment 4 2015-04-15 02:53:39 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.