Fix Debug build error 'comparison of unsigned expression >= 0 is always true [-Werror=type-limits]' https://bugs.webkit.org/show_bug.cgi?id=143751

Patch by Joonghun Park <jh718.park@samsung.com> on 2015-04-15
Reviewed by Csaba Osztrogonác.

No new tests, no new behaviors.

* rendering/svg/SVGTextChunk.cpp:
(WebCore::SVGTextChunk::SVGTextChunk):

Canonical link: https://commits.webkit.org/161785@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@182840 268f45cc-cd09-0410-ab3c-d52691b4dbfc